--- a/css/index.css
+++ b/css/index.css
@@ -74,3 +74,29 @@
 #tituloC{
     text-align: center;
 }
+
+#contenedorRegistro{
+    border:3px solid gray;
+   border-radius:10px;
+   padding:50px;
+   line-height: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+#TituloRegistrar{
+    margin-top: 20px;
+    text-align: center;
+}
+#tituloRegistrar2{
+    margin-top: 20px;
+    text-align: center;
+}
+#registrar2{
+    border:3px solid gray;
+   border-radius:10px;
+   padding:50px;
+   line-height: 50px;
+    margin-right: 100px;
+    margin-left: 100px;
+}
