cerrar sesion cliente

--- a/css/index.css
+++ b/css/index.css
@@ -100,3 +100,12 @@
     margin-right: 100px;
     margin-left: 100px;
 }
+#imagenAD{
+    width: 5px;
+    height: 10px;
+    
+    
+}
+#cardN{
+    text-align: center;
+}
