pagina editar cliente

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,3 +8,10 @@
     right: 0.4em;
     border:1.5px solid white;
 }
+.but1{
+    margin: 5px 5px 5px 5px;
+}
+/*.containereditar{
+    margin: 25px;
+    align-items: center;
+}*/
