--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,11 @@
     height:300px;
     
 }
+.contenedorlogin{
+    margin-top: 50px;
+    width: 10px;
+    height:300px;
+}
 .titulo{
     text-align: center;
 }
